Update with fixed epp product + lots of small fixes